turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:3: error: STOP is already defined as value STOP
val STOP = 0
    ^Turmite:3: error: STOP  is already defined as value STOP
val STOP = 0
    ^Turmite:4: error: NOTURN is already defined as value NOTURN
val NOTURN = 1
    ^Turmite:4: error: NOTURN  is already defined as value NOTURN
val NOTURN = 1
    ^Turmite:5: error: LEFT is already defined as value LEFT
val LEFT = 2
    ^Turmite:5: error: LEFT  is already defined as value LEFT
val LEFT = 2
    ^Turmite:7: error: RIGHT is already defined as value RIGHT
val RIGHT = 8
    ^Turmite:7: error: RIGHT  is already defined as value RIGHT
val RIGHT = 8
    ^